FLUID-4229: Fixed slideralignments

--- a/src/webapp/components/uiOptions/css/FullUIOptions.css
+++ b/src/webapp/components/uiOptions/css/FullUIOptions.css
@@ -8,7 +8,7 @@
 	font-weight: bold;
 	clear: both;
 	color: #444444;
-	padding: 14px 0px 22px 25px;
+	padding: 14px 0px 5px 25px;
 }
 
 .fl-uiOptions h2 img {
