--- a/src/webapp/components/uiOptions/css/UIOptions.css
+++ b/src/webapp/components/uiOptions/css/UIOptions.css
@@ -93,34 +93,36 @@
 /* LAYOUT DATA */
 .fl-uiOptions .fl-slider-vert {height:10em; width:0.8em;}
 .fl-uiOptions .fl-slider-horz {width:140px; height:3px; -moz-border-radius: 100%; -webkit-border-radius: 100%;}
-.fl-uiOptions .fl-slider {position:relative; background-color:#555555; padding:0;}
+.fl-uiOptions .fl-slider {position:relative; background-color:#555555; padding:0; margin-top:8px;}
 .fl-uiOptions .fl-slider .fl-handle, .fl-slider a {position:absolute; display:block; height:32px; width:32px; top:0; left:0;}
 .fl-uiOptions .fl-slider a { background-image:url('../images/uio_icon_sliderhandle.png'); background-repeat:no-repeat; background-position:center center; bottom: 16px;}
 .fl-uiOptions .fl-slider-vert .fl-handle, .fl-slider-vert a {margin-left:-0.2em; margin-top:-0.5em;}
 .fl-uiOptions .fl-slider-horz .fl-handle, .fl-slider-horz a {margin-top:-14px; margin-left:-6px;}
 .fl-uiOptions .fl-text-slider-left { 
-	padding-right: 8px; 
+	padding-right: 15px; 
 	background-image: url("../images/uio_icon_smallA_10x10.png");
 	background-repeat: no-repeat;
 	height: 10px;
 	width: 10px;
+	margin-top: 5px;
 }
 .fl-uiOptions .fl-text-slider-right { 
-	padding-right: 8px; 
+	padding-right: 15px; 
 	background-image: url("../images/uio_icon_bigA_20x20.png");
 	background-repeat: no-repeat;
 	height: 20px;
 	width: 20px;	
 }
 .fl-uiOptions .fl-spacing-slider-left { 
-	padding-right: 8px; 
+	padding-right: 15px; 
 	background-image: url("../images/uio_icon_linesNarrow_16x12.png");
 	background-repeat: no-repeat;
 	height: 12px;
 	width: 16px;
+	margin-top: 5px;	
 }
 .fl-uiOptions .fl-spacing-slider-right { 
-	padding-right: 8px; 
+	padding-right: 15px; 
 	background-image: url("../images/uio_icon_linesWide_16x21.png");
 	background-repeat: no-repeat;
 	height: 21px;
@@ -128,10 +130,15 @@
 }
 
 /* THEME DATA */
-.fl-theme-hc .fl-uiOptions  .fl-slider {background-color:#000;}
-.fl-theme-hc .fl-uiOptions  .fl-slider .fl-handle, 
-.fl-theme-hc .fl-uiOptions  .fl-slider a,
-.fl-theme-hc .fl-uiOptions  .fl-slider a:hover {border:1px solid #000 !important; background-color:#fff !important;}
+.fl-theme-hc .ui-slider-horizontal .ui-slider-handle,
+.fl-theme-hci .ui-slider-horizontal .ui-slider-handle,
+.fl-theme-blackYellow .ui-slider-horizontal .ui-slider-handle,
+.fl-theme-yellowBlack .ui-slider-horizontal .ui-slider-handle { margin-top: -5px; }
+
+.fl-theme-hc .fl-uiOptions .fl-slider {background-color:#000;}
+.fl-theme-hc .fl-uiOptions .fl-slider .fl-handle, 
+.fl-theme-hc .fl-uiOptions .fl-slider a,
+.fl-theme-hc .fl-uiOptions .fl-slider a:hover {border:1px solid #000 !important; background-color:#fff !important;}
 
 .fl-theme-hci .fl-uiOptions .fl-slider {background-color:#fff;}
 .fl-theme-hci .fl-uiOptions .fl-slider .fl-handle, 
